--- a/ui/src/styles/layout.mobile.css
+++ b/ui/src/styles/layout.mobile.css
@@ -306,10 +306,10 @@
     font-size: 11px;
   }
 
-  .theme-select {
+  .theme-orb__trigger {
+    width: 26px;
     height: 26px;
-    min-width: 78px;
-    font-size: 11px;
+    font-size: 13px;
   }
 }
 
@@ -372,9 +372,9 @@
     padding: 3px 6px;
   }
 
-  .theme-select {
+  .theme-orb__trigger {
+    width: 24px;
     height: 24px;
-    min-width: 72px;
-    font-size: 10px;
+    font-size: 12px;
   }
 }
